[project]
name = "an"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "alexsuthree", email = "alexsuthree@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.15.2",
    "pymysql>=1.1.1",
    "django-filter>=24.2",
    "django-cors-headers>=4.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
m1 = "manage.py makemigrations"
m2 = "python manage.py migrate"